examples/good/1.emm
int main() {
  int x = 0;
  bool y = true;
  string z = "test";
  return 0;
}
