examples/bad/12-bad_return.emm
string f() {
  return 3;
}

int main() {
  f();
  return 0;
}
